# quadtree-puzzle

./: CMakeLists.txt  Puzzle.cpp  Puzzle.h  QuadTree.cpp  QuadTree.h  README.md  main.cpp  scratch.cpp
images/: gigabyte.ppm  landscape.ppm
